--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
 
         // Change the image every 5 seconds
-        setInterval(changeImage, 5000);
+        setInterval(changeImage, 3000);
       });
     </script>
   </head>
@@ -62,12 +62,12 @@
         </div>
 
         <ul>
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Menu">Menu</a></li>
-          <li><a href="#Gallary">Gallary</a></li>
-          <li><a href="#Review">Review</a></li>
-          <li><a href="#Order">Order</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="abt.html" target="blank">About</a></li>
+          <li><a href="menu.html" target="blank">Menu</a></li>
+          <li><a href="gallary.html" target="blank">Gallary</a></li>
+          <li><a href="review.html" target="blank">Review</a></li>
+          <li><a href="order.html" target="blank">Order</a></li>
         </ul>
 
         <div class="icon">
@@ -98,10 +98,10 @@
         reality. Discover the extraordinary at FoodZone.
       </p>
 
-      <div class="main_btn">
+      <!-- <div class="main_btn">
         <a href="#Order" class="btn btn-primary custom-yellow-btn">Order Now</a>
         <i class="fa-solid fa-angle-right"></i>
-      </div>
+      </div> -->
     </section>
 
     <!--About-->
@@ -128,7 +128,7 @@
         </div>
       </div>
 
-      <a href="#Order" class="about_btn">Order Now</a>
+      <!-- <a href="#Order" class="about_btn">Order Now</a> -->
     </div>
 
     <!--Menu-->
@@ -160,7 +160,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -187,7 +187,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -214,7 +214,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -241,7 +241,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -268,7 +268,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -295,7 +295,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -322,7 +322,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -349,7 +349,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -376,7 +376,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -404,7 +404,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -431,7 +431,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
 
@@ -458,7 +458,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <a href="#Order" class="menu_btn">Order Now</a>
+            <!-- <a href="#Order" class="menu_btn">Order Now</a> -->
           </div>
         </div>
       </div>
@@ -680,10 +680,11 @@
         </div>
       </div>
     </div>
-
+<br><br><br><br><br><br>
     <!--Order-->
 
     <div class="order" id="Order">
+      
       <h1><span>Order</span>Now</h1>
 
       <div class="order_main">
@@ -730,12 +731,12 @@
             <input placeholder="your Payment method" />
           </div>
 
-          <a href="#" class="order_btn">Order Now</a>
-          <a href="#" class="order_btn">Book a table Now</a>
+          <!-- <a href="#" class="order_btn">Order Now</a> -->
+          <!-- <a href="#" class="order_btn">Book a table Now</a> -->
         </form>
       </div>
     </div>
-
+    <br><br><br><br><br><br>
     <!--Team-->
 
     <div class="team">
